Fix me unable to git :(
This mega commit has the following screwed commits:
Add particles to low health units
Fix session records clearing on restart
Populate stats_streak table OnHeroPicked
Fix for not counting misses on siege units
Use Tutorial:SetGameFrozen(bFreeze) for pausing the game
Remove standard middle lane spawners for a custom one (replicating the originals) which can be resseted after a restart
Fix 30 secons left! message showing at 9:50 instead of showing at 9:30
Fix being able to purchase items
Clear unused code and comments
Make towers regenerate incoming damage rendering them indestructible

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,8 @@ game/dota_addons/hero_demo/*
 game/dota_addons/tutorial_assist_game/*
 game/dota_addons/tutorial_basics/*
 game/dota_addons/dota2cfg.cfg
+game/dota_addons/vpks/*
+game/dota_addons/lasthitchallenge/*.bin
 
 bin/*
 _CommonRedist/*
