--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@ installscript.vdf
 steam_appid.txt
 thirdpartylegalnotices.txt
 game/dota_addons/lasthitchallengetest/
+content/dota_addons/lasthitchallengetest/
