--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,5 @@ steam_appid.txt
 thirdpartylegalnotices.txt
 game/dota_addons/lasthitchallengetest/
 content/dota_addons/lasthitchallengetest/
+content/dota_addons/workshop_testbed/
+game/dota_addons/workshop_testbed/
