--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ game/dota_lv/*
 game/dota_lv_imported/*
 game/dota_schinese/*
 game/dota_schinese_imported/*
+game/dota_russian/*
 
 game/dota_addons/addon_template/*
 game/dota_addons/adventure_example/*
