Ignore some unnecesary files

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,5 @@ game/dota_addons/lasthitchallengetest/
 content/dota_addons/lasthitchallengetest/
 content/dota_addons/workshop_testbed/
 game/dota_addons/workshop_testbed/
+fontconfig/
+installscript.old
