Ignore some new files

--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,8 @@ game/dota_addons/vpks/*
 game/dota_addons/lasthitchallenge/*.bin
 game/dota_addons/lasthitchallenge/panorama/*
 game/dota_addons/lasthitchallenge/panorama_debugger.cfg
+game/dota_addons/lasthitchallenge/demoheader.tmp
+game/dota_addons/lasthitchallenge/server_log.txt
 game/dota_addons/lasthitchallenge/particles/*
 game/dota_addons/lasthitchallenge/materials/*
 
