--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,4 @@ content/dota_addons/workshop_testbed/
 game/dota_addons/workshop_testbed/
 fontconfig/
 installscript.old
+game/dota_addons/dungeon/
